# tri-pak-rust-nextjs-android

./: README.md
backend/: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
backend/latest_codes/: four_file.txt  one_file.txt  three_file.txt  two_file.txt
backend/migrations/2024-10-29-164820_create_user/: down.sql  up.sql
backend/migrations/2024-10-31-091443_create_roles_and_user_roles/: up.sql
backend/migrations/2024-11-01-174238_create_messages/: up.sql
backend/migrations/2024-11-04-112916_create_accounts/: up.sql
backend/migrations/2024-11-04-113234_create_avatar/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/application/use_cases/: account_use_cases.rs  auth_use_cases.rs  avatar_use_cases.rs  message_use_cases.rs  mod.rs  user_use_cases.rs
backend/src/domain/entities/: account.rs  auth.rs  avatar.rs  message.rs  mod.rs  user.rs
backend/src/domain/repositories/: account_repository.rs  auth_repository.rs  avatar_repository.rs  message_repository.rs  mod.rs  user_repository.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/config/: database.rs
backend/src/infrastructure/repositories/: account_repository.rs  auth_repository.rs  avatar_repository.rs  message_repository.rs  mod.rs  user_repository.rs
backend/src/infrastructure/websocket/: mod.rs  realtime_message_manager.rs  user_status_manager.rs
backend/src/presentation/: mod.rs
backend/src/presentation/handlers/: account_handlers.rs  auth_handlers.rs  avatar_handlers.rs  message_handlers.rs  mod.rs  user_handlers.rs  ws_handlers.rs
(+67 files in other folders)
