[package]
name = "rust-clean-arch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix = "0.13"
actix-web-actors = "4.2"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
jsonwebtoken = "9.1.1"
bcrypt = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
actix-multipart = "0.6"
actix-cors = "0.6"
actix-files = "0.6"
reqwest = { version = "0.11.14", features = ["multipart", "json"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
mockall = "0.11"
webp = "0.2"
rpassword = "7.3"
tokio-stream = "0.1"
log = "0.4.22"
mime = "0.3"
mime_guess = "2.0"

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"